--- a/Final/HomePage/background.css
+++ b/Final/HomePage/background.css
@@ -1,79 +1,66 @@
-body{
-	background-image: url('background.jpg');
-	color:black;
+.head{
+	width: 100%;
+	height: 10%;
+	background-color: #363b44;
+	margin-top: -10px;
+	margin-left: -10px;
+	display: flex;
+	position: fixed;
 }
-#bottom1{
-	background-image: url('background2.jpg');
-	background-size: 100% 100%;
-	margin-left: 12%;
-	margin-right: 10%;
+#sidebar{
+	width: 18%;
+	height: 565px;
+	background-color: #637283;
+	text-align: center;
+	position: fixed;
+	margin-top: 53px;
+	margin-left: -10px;
+
+}
+.sidebutton{
+	background-color: transparent;
+	width: 80%;
+	height: 5%;
+	text-align: justify;
+	color: white;
+	text-decoration: none;
+	padding-top: 5%;
+	padding-left: 20%;
+
 }
 a{
-	text-decoration:none;
+	color: white;
+	display: inline-block;
+	text-decoration: none;
 }
-a:link{
-	color:white;
+.sidebutton:hover{
+	background-color: #363b44;
 }
-a:visited{
-	color:white;
+#content{
+	background-color: #DDE0E4;
+	width: 82%;
+	height: 100%;
+	margin-left: 200px;
+	margin-top: 60px;
+
 }
-a:hover{
-	color:blue;
+th{
+	border-bottom: solid 1px;
 }
-a.atext:link{
-	color:black;
+::-webkit-input-placeholder{
+	color: white;
+	font-size: medium;
 }
-a.atext:visited{
-	color:black;
+.search{
+	background-color: transparent;
+	width: 75%;
+	border-style: none;
+	font-size: medium;
+	color: white;
 }
-a.atext:hover{
-	color:blue;
+.user:hover{
+	text-decoration: underline;
 }
-#t1{
-	width:100%;
-	background-color:black;
-	border-collapse:collapse;
-}
-.t2{
-	border-left:2px solid white;
-	text-align:center;
-	width:20%;
-}
-.a1{
-	color:white;
-	text-decoration:none;
-	font-size:25px;
-	font-weight:bold;
-}
-#p1{
-	border:2px solid black;
-	border-radius:6px;
-	background-color:yellow;
-	font-weight:bolder;
-	font-size:18px;
-	width: 250px;
-}
-.head1{
-	display:flex;
-	padding-top: 15px;
-	/*margin-left:12%;
-	margin-right:10%;*/
-	background-color:#0797C1;
-	box-shadow: 1px 10px 20px #000000;
-	padding-bottom:10px;
-}
-.head2{
-	/*margin-left:12%;
-	margin-right:10%;*/
-	margin-bottom: 10px;
-	box-shadow: 1px 10px 20px #000000;
-}
-.button1{
-	border: 2px solid #00008B;
-	background-color:orange;
-	color:#00008B;
-	border-radius:15px;
-	text-align:left;
-	font-weight:bold;
-	box-shadow: 1px 6px 8px #000000;
+body{
+		background-color: #DDE0E4;
 }
