--- a/Web_Site_New_3_1/Cart/cart.css
+++ b/Web_Site_New_3_1/Cart/cart.css
@@ -1,40 +1,44 @@
 .cartbox{
 	display:flex;
 	padding-left: 10%;
-	padding-right: 10%;	
+	padding-right: 10%;
 		}
 .box1{
-	background-color: white;
+	background-color: #e7e8ed;
 	border: solid gray 1px;
-	width: 70%; 
+	width: 70%;
 	padding: 10px;
+	color: #1d1d1d
 		}
 .flex{
 	display: flex;
 }
 .box2{
-	background-color: white;
+	background-color: #e7e8ed;
 	border: solid gray 1px;
 	width: 30%;
-	margin-left: 10px; 
+	margin-left: 10px;
 	padding: 10px;
 	height: 275px;
+	color: #1d1d1d;
 }
 .formbox{
 	width:50%;
 }
 .canbutton{
-	color: #0654ba;
-	background-color: 
-	white; width:80px; 
-	height:40px; 
+	color: #ededed;
+	border: 1px solid black;
+	cursor: pointer;
+	background-color:#de2121;
+	width:80px;
+	height:40px;
 	border-radius: 10px;
 }
 .dbutton{
-	color: white; 
-	background-color: #0654ba; 
-	width:80px; 
-	height:40px; 
+	color: white;
+	background-color: #0654ba;
+	width:80px;
+	height:40px;
 	border-radius: 10px;
 }
 .table1{
@@ -43,46 +47,45 @@
 .table2{
 	padding-left: 40px;
 }
+#end1{
+	background-image: url('../HomePage/background4.jpg');
+	background-size: 100% 100%;
+	padding-bottom: 20px;
+	box-shadow: 1px 10px 20px #000000;
+	margin-left: 10%;
+	margin-right: 10%;
+	color:#000600;
+}
 .paybutton{
-	padding-top: 20px;
-	color: white; 
+	padding-top: 15px;
+	color: #ececec;
 	background-color: #0797C1;
+	display: inline-block;
 	border-color:1px solid black;
 	width: 90%;
-	height: 50px; 
+	height: 50px;
+	font-size: 20px;
+	border-radius: 10px;
+}
+.confirmPay{
+	color: #ececec;
+	cursor:pointer;
+	border: 1px solid black;
+	background-color: #0797C1;
+	width: 90%;
+	height: 50px;
 	font-size: 20px;
 	border-radius: 10px;
 }
 .link{
 	text-decoration: none;
 }
-#t1{
-	width:100%;
-	background-color:black;
-	border-collapse:collapse;
+a.bottomlinks2:link, a.bottomlinks2:visited{
+	color:#000600;
 }
-.t2{
-	border-left:2px solid white;
-	text-align:center;
-	width:20%;
-}
-.t2_1{
-	text-align:center;
-	width:20%;
-}
-.a1{
-	color:white;
-	text-decoration:none;
-	font-size:25px;
-	font-weight:bold;
-}
-#p1{
-	border:2px solid black;
-	border-radius:6px;
-	background-color:yellow;
-	font-weight:bolder;
-	font-size:18px;
-	width: 250px;
+a.bottomlinks2:hover{
+	color: #dcdcde;
+	text-decoration: underline;
 }
 a.foot{
 	text-decoration:none;
@@ -97,20 +100,38 @@ a.foot:hover{
 	color:purple;
 }
 a.remove:link{
-	color:blue;
+	color:#2f20eb;
 }
 a.remove:visited{
-	color:purple;
+	color:#2f20eb;
 }
 a.remove:hover{
-	color:red;
+	color:#e11212;
+}
+a.continue:link{
+	color:#2c1ee9;
+}
+a.continue:visited{
+	color:#2c1ee9;
+}
+a.continue:hover{
+	color:#0d00bf;
+	text-shadow: 1px 1px 1px #4a3ee7
+}
+a.paybutton:hover{
+	box-shadow: 1px 6px 8px #000000;
+	color: #e4e4e4;
+}
+.canbutton:hover{
+	box-shadow: 1px 6px 8px #000000;
+}
+.confirmPay:hover{
+	box-shadow: 1px 6px 8px #000000;
 }
 .contShopping{
 	padding-top: 20px;
-	color: blue; 
-	background-color: white;
+	color: blue;
 	width: 90%;
-	height: 50px; 
+	height: 50px;
 	font-size: 20px;
-	border-radius: 10px;	
 }
